--- a/Class/12R/index.html
+++ b/Class/12R/index.html
@@ -359,7 +359,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>. <a href="https://www.pakutaso.com" title="無料の写真素材「ぱくたそ」" >無料の写真素材「ぱくたそ」 </a></p>
+						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>, <a href="https://www.pakutaso.com" title="無料の写真素材「ぱくたそ」" >無料の写真素材「ぱくたそ」 </a></p>
 					</footer>
 
 			</div>
