--- a/Class/12R/index.html
+++ b/Class/12R/index.html
@@ -7,6 +7,8 @@
 <html>
 	<head>
 		<title>神社で精進社</title>
+		<link rel="icon" href="/favicon/favicon.ico" id="favicon">
+		<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon-180x180.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
